fix: The cross button should be right aligned inside the input box (#2370)
* fix: The cross button should be right aligned inside the input box

* fix: cross in team-reports

--- a/src/app/fyle/my-expenses/my-expenses.page.scss
+++ b/src/app/fyle/my-expenses/my-expenses.page.scss
@@ -117,7 +117,6 @@
     mat-form-field {
       ::ng-deep .mat-mdc-text-field-wrapper {
         padding-left: 6px;
-        padding-right: 6px;
       }
 
       ::ng-deep .mat-icon {
@@ -143,7 +142,6 @@
     }
 
     &-close {
-      margin: -10px;
       font-size: 18px;
     }
   }
